[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/Enemies/Malfrat/Malfrat.gd" type="Script" id=1]
[ext_resource path="res://assets/Ship/Ship2.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 97.7363, 90.7822 )

[node name="Malfrat" type="Node2D"]
z_index = -1
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Hitbox" type="Area2D" parent="."]

[node name="HitboxPolygon" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, -75 )
shape = SubResource( 1 )

[node name="DyingAnimationTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ship" parent="." instance=ExtResource( 2 )]

[node name="Canon" type="Node2D" parent="."]
position = Vector2( -91.282, -64.8137 )

[node name="Trajectory" type="Line2D" parent="Canon"]
z_index = 5

[node name="ShootCooldownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="PrepareShoot" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="RefreshBalistic" type="Timer" parent="."]
wait_time = 0.1

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="DyingAnimationTimer" to="." method="_on_DyingAnimationTimer_timeout"]
[connection signal="timeout" from="ShootCooldownTimer" to="." method="_on_ShootCooldownTimer_timeout"]
[connection signal="timeout" from="PrepareShoot" to="." method="_on_PrepareShoot_timeout"]
[connection signal="timeout" from="RefreshBalistic" to="." method="_on_RefreshBalistic_timeout"]
